--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.config.prod.js",
     "watch": "webpack watch"
   }
 }
